--- a/src/main/shared/ui/index.scss
+++ b/src/main/shared/ui/index.scss
@@ -11,3 +11,6 @@
 @import './checkbox/checkbox';
 @import './tel-link/tel-link';
 @import './burger/burger';
+@import './breadcrumbs/breadcrumbs';
+@import './picture-doc/picture-doc';
+@import './modal/modal';
