--- a/src/main/shared/modules/form/form.scss
+++ b/src/main/shared/modules/form/form.scss
@@ -9,6 +9,7 @@
   padding: 46px 50px;
   border-radius: 20px;
   background: $gradient-primary-light;
+  cursor: auto;
 
   @include r($mobile) {
     padding: 30px 20px;
