--- a/src/main/shared/modules/index.scss
+++ b/src/main/shared/modules/index.scss
@@ -19,6 +19,8 @@
 @import './dropdown/dropdown';
 @import './success-modal/success-modal';
 @import './mobile-menu/mobile-menu';
+@import './intro/intro';
+@import './picture-backdrop/picture-backdrop';
 
 @import './articles/article-preview';
 @import './articles/article-feature';
