--- a/src/main/shared/modules/index.scss
+++ b/src/main/shared/modules/index.scss
@@ -21,9 +21,13 @@
 @import './mobile-menu/mobile-menu';
 @import './intro/intro';
 @import './picture-backdrop/picture-backdrop';
+@import './services/services';
+@import './steps-info/steps-info';
+@import './video-block/video-block';
 
 @import './articles/article-preview';
 @import './articles/article-feature';
 @import './articles/article-category';
 @import './articles/article-person';
 @import './articles/article-review';
+@import './articles/article-timeline';
