--- a/src/main/shared/modules/index.scss
+++ b/src/main/shared/modules/index.scss
@@ -24,6 +24,8 @@
 @import './services/services';
 @import './steps-info/steps-info';
 @import './video-block/video-block';
+@import './requisites/requisites';
+@import './gallery/gallery';
 
 @import './articles/article-preview';
 @import './articles/article-feature';
