--- a/src/main/shared/modules/intro/intro.scss
+++ b/src/main/shared/modules/intro/intro.scss
@@ -44,7 +44,9 @@
 
   &__picture {
     margin-right: -21%;
+    margin-top: auto;
     max-height: 560px;
+    width: 100vw;
 
     @include r($mobile) {
       margin-right: -7%;
