--- a/src/main/shared/modules/grid/grid.scss
+++ b/src/main/shared/modules/grid/grid.scss
@@ -21,6 +21,11 @@
     &--flex {
       display: flex;
       flex-direction: column;
+
+      &-row {
+        display: flex;
+        flex-direction: row;
+      }
     }
 
     &--1 {
