--- a/src/main/widgets/footer/footer.scss
+++ b/src/main/widgets/footer/footer.scss
@@ -50,6 +50,8 @@
       grid-template-columns: 1fr 1fr;
       gap: 4px;
       width: 100%;
+      max-width: fit-content;
+      margin: 0 auto;
     }
   }
 
