feat: add fix size to container

--- a/src/main/shared/modules/container/container.scss
+++ b/src/main/shared/modules/container/container.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  @include calc-max-width(1630, 1920);
+  max-width: 1630px;
   padding: 0 30px;
   margin: 0 auto;
 
@@ -10,11 +10,11 @@
   }
 
   &--fluid {
-    max-width: 100%;
+    max-width: 1920px;
   }
 
   &--no-padding {
-    @include calc-max-width(1630, 1920);
+    max-width: 1630px;
     padding: 0;
 
     @include r($mobile) {
