feat: add fix size to container

--- a/src/main/widgets/footer/footer.scss
+++ b/src/main/widgets/footer/footer.scss
@@ -1,5 +1,7 @@
 .footer {
-  margin: 0 30px 30px;
+  margin: 0 auto;
+  max-width: 1630px;
+  width: 100%;
   min-height: 348px;
   background: $gradient-primary-dark;
   border-radius: 20px;
