--- a/src/main/shared/modules/index.scss
+++ b/src/main/shared/modules/index.scss
@@ -26,8 +26,8 @@
 @import './video-block/video-block';
 @import './requisites/requisites';
 @import './gallery/gallery';
+@import './main-block/main-block';
 
-@import './articles/article-preview';
 @import './articles/article-feature';
 @import './articles/article-category';
 @import './articles/article-person';
