--- a/src/main/shared/ui/index.scss
+++ b/src/main/shared/ui/index.scss
@@ -15,3 +15,7 @@
 @import './picture-doc/picture-doc';
 @import './modal/modal';
 @import './map/map';
+@import './video-button/video-button';
+@import './tag/tag';
+@import './menu/menu';
+@import './place/place';
