--- a/src/main/shared/modules/about-block/about-block.scss
+++ b/src/main/shared/modules/about-block/about-block.scss
@@ -1,21 +1,31 @@
 .about-block {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 77px;
+  grid-template-columns: minmax(600px, 812px) minmax(500px, 708px);
+  gap: 20px;
+  min-height: 745px;
 
   @include r($mobile) {
     display: flex;
     flex-direction: column;
-    gap: 38px;
   }
 
   &__info {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding: 90px 60px;
+    background: linear-gradient(0deg, #F7F9FC, #F7F9FC),
+    linear-gradient(246.46deg, #F0F1FE 0%, #FDFEFF 47%, #EEEFFE 100%),
+    linear-gradient(246.46deg, #F1F2F6 0%, #FDFEFF 47%, #F1F2F6 100%);
+    border-radius: 20px;
+
+    @include r($mobile) {
+      padding: 40px 20px 30px;
+    }
   }
 
   &__title {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 
     @include r($mobile) {
       margin-bottom: 20px;
@@ -32,13 +42,38 @@
 
   &__slider {
     display: flex;
-    flex-direction: column;
-    gap: 30px;
     width: 100%;
+    border-radius: 20px;
     overflow: hidden;
 
     @include r($mobile) {
-      gap: 8px;
+      height: 358px;
+    }
+  }
+
+  &__picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    img {
+      @include coverFull();
+    }
+  }
+
+  &__text {
+    margin-bottom: 70px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+
+    @include r($mobile) {
+      margin-bottom: 30px;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
     }
   }
 }
