--- a/src/main/shared/modules/articles/article-feature.scss
+++ b/src/main/shared/modules/articles/article-feature.scss
@@ -1,49 +1,47 @@
 .article-feature {
   display: flex;
   flex-grow: 1;
-  gap: 20px;
-  padding: 30px 0 0 40px;
+  gap: 25px;
   min-height: 320px;
-  background: $gradient-primary;
   border-radius: 20px;
   overflow: hidden;
+  background: linear-gradient(246.46deg, #F1F2F6 0%, #FDFEFF 47%, #F1F2F6 100%);
 
-  @include r($mobile) {
-    padding: 20px 0 0 20px;
-    max-height: 226px;
+  @include r($auxiliary) {
+    min-height: 250px;
   }
 
-  &--light {
-    background: $gradient-primary-light;
-
-    .article-feature__title,
-    .article-feature__text {
-      color: $black;
-    }
+  @include r($mobile) {
+    justify-content: space-between;
+    min-height: 237px;
+    max-height: 237px;
   }
 
   &__info {
     display: flex;
     flex-direction: column;
-    padding-bottom: 30px;
     gap: 30px;
-    max-width: 50%;
+    padding: 39px 0 10px 30px;
+
+    @include r($auxiliary) {
+      padding: 30px 0 10px 30px;
+      gap: 20px;
+    }
 
     @include r($mobile) {
-      flex-shrink: 0;
-      gap: 14px;
+      padding: 23px 0 20px 20px;
+      gap: 16px;
     }
   }
 
   &__title {
     font-size: 26px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 33px;
-    color: $white;
+    color: $gray-black;
 
-    @include r($mobile) {
+    @include r($auxiliary) {
       font-size: 20px;
-      font-weight: 600;
       line-height: 25px;
     }
   }
@@ -52,11 +50,29 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 25px;
-    color: $white;
+    color: #707178;
 
-    @include r($mobile) {
+    @include r($auxiliary) {
       font-size: 16px;
       line-height: 20px;
+    }
+
+    a {
+      color: $primary;
+      text-decoration: underline;
+      text-decoration-thickness: 1px;
+    }
+
+    &--small {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 25px;
+      color: $gray-black;
+
+      @include r($auxiliary) {
+        font-size: 16px;
+        line-height: 20px;
+      }
     }
   }
 
@@ -64,23 +80,35 @@
     position: relative;
     display: flex;
     align-items: center;
+    align-self: flex-end;
     justify-content: center;
-    padding: 10px 0 0 10px;
-    width: calc(100% + 10px);
-    min-width: 221px;
+    width: auto;
+    min-width: 243px;
+    height: calc(100% - 40px);
+    outline: 10px solid #3F78FB1A;
+    border-radius: 30px 0 0 0;
+
+    @include r($auxiliary) {
+      min-width: 170px;
+      height: calc(100% - 40px);
+    }
+
+    @include r($mobile) {
+      flex-shrink: 0;
+      height: 200px;
+      min-width: 140px;
+      width: 140px;
+    }
   }
 
   &__img {
     @include coverFull();
-    border-radius: 20px 0 0 0;
-    z-index: 1;
+    border-radius: 30px 0 0 0;
+  }
 
-    &--backdrop {
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: .2;
-      z-index: 0;
-    }
+  &--primary {
+    background: linear-gradient(246.46deg, rgba(240, 241, 254, 0.05) 0%, rgba(253, 254, 255, 0.05) 47%, rgba(238, 239, 254, 0.05) 100%),
+    linear-gradient(246.46deg, rgba(66, 165, 181, 0.1) 0%, rgba(66, 165, 181, 0.06) 47%, rgba(66, 165, 181, 0.1) 100%);
+
   }
 }
