--- a/src/main/shared/modules/articles/article-person.scss
+++ b/src/main/shared/modules/articles/article-person.scss
@@ -1,92 +1,145 @@
 .article-person {
   display: flex;
   flex-direction: column;
-  padding: 30px;
-  height: 100%;
-  background-color: $white;
+  background-color: #F7F9FC;
   border-radius: 20px;
-  border: 1px solid $outline;
-  overflow: hidden;
 
-  @include r($mobile) {
-    padding: 20px;
-  }
-
-  &__info {
+  &__header {
+    position: relative;
     display: flex;
-    flex-direction: column;
-    padding: 30px 20px 0;
-    height: 100%;
+    width: 100%;
+    height: 390px;
+    border-radius: 20px;
+    overflow: hidden;
 
     @include r($mobile) {
-      padding: 20px 10px 0;
+      height: 344px;
+    }
+
+    @include hov() {
+      &:hover {
+        .article-person__button {
+          padding: 23px 40px;
+          height: 70px;
+          width: auto;
+
+          .button__content {
+            width: auto;
+            overflow: visible;
+          }
+        }
+
+        .article-person__icon {
+          display: none;
+        }
+      }
     }
   }
 
   &__picture {
     display: flex;
-    max-height: 440px;
-    flex-shrink: 0;
-    aspect-ratio: 1/1;
-    border-radius: 20px;
-    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 
     img {
-      @include coverFull()
-    }
-  }
-
-  &__title {
-    margin-bottom: 14px;
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 36px;
-    color: $primary;
-
-    @include r($mobile) {
-      margin-bottom: 10px;
-      font-size: 20px;
-      line-height: 24px;
-    }
-  }
-
-  &__description {
-    margin-bottom: 14px;
-    font-size: 22px;
-    font-weight: 600;
-    line-height: 28px;
-
-    @include r($mobile) {
-      margin-bottom: 10px;
-      font-size: 14px;
-      line-height: 18px;
-    }
-  }
-
-  &__exp {
-    margin-bottom: 16px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    color: $gray;
-
-    @include r($mobile) {
-      margin-bottom: 10px;
-      font-size: 12px;
-      line-height: 19px;
+      @include coverFull();
     }
   }
 
   &__button {
-    margin-top: auto;
-    padding: 20px;
-  }
-
-  &__more {
-    margin-bottom: 60px;
+    position: absolute;
+    left: 20px;
+    bottom: 10px;
+    gap: 0;
+    padding: 0;
+    width: 60px;
+    height: 60px;
+    transition: .2s linear;
 
     @include r($mobile) {
-      margin-bottom: 54px;
+      bottom: 20px;
+      padding: 23px 40px;
+      width: 100%;
+      height: 70px;
+    }
+
+    .button__content {
+      @include rmin($mobile) {
+        width: 0;
+        overflow: hidden;
+        transition: .2s linear;
+      }
+    }
+  }
+
+  &__icon {
+    display: flex;
+    width: 20px;
+    height: 20px;
+    transform: rotate(-45deg);
+    fill: $white;
+
+    @include r($mobile) {
+      display: none;
+    }
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 20px 20px 30px;
+
+    @include r($mobile) {
+      padding: 24px 20px;
+    }
+  }
+
+  &__title {
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 33px;
+    color: $gray-black;
+
+    @include r($mobile) {
+      font-size: 22px;
+      font-weight: 500;
+      line-height: 28px;
+    }
+  }
+
+  &__description {
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    color: $gray-black;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0.03em;
+    color: $primary;
+
+    @include r($mobile) {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 20px;
+      letter-spacing: 0.03em;
+    }
+
+    svg {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      fill: $primary;
     }
   }
 }
