--- a/src/main/shared/modules/features/features.scss
+++ b/src/main/shared/modules/features/features.scss
@@ -2,5 +2,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
-  gap: 35px;
+  gap: 20px;
+
+  @include r($mobile) {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
