--- a/src/main/shared/modules/feedback/feedback.scss
+++ b/src/main/shared/modules/feedback/feedback.scss
@@ -1,7 +1,7 @@
 .feedback {
   display: flex;
   justify-content: space-between;
-  gap: 30px;
+  gap: 20px;
 
   @include r($mobile) {
     flex-direction: column;
@@ -9,50 +9,44 @@
   }
 
   &__info {
-    position: absolute;
-    left: 40px;
-    bottom: 40px;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    padding: 40px;
+    padding: 40px 50px;
     min-width: 460px;
-    background-color: rgba($white, .5);
-    backdrop-filter: blur(12.7px);
+    background-color: $white;
     border: 1px solid $white;
-    border-radius: 25px;
 
     @include r($mobile) {
-      left: 20px;
-      bottom: 20px;
-      gap: 10px;
-      padding: 20px 20px 25px;
+      gap: 8px;
+      padding: 24px 20px;
       min-width: auto;
-      border-radius: 10px;
     }
   }
 
   &__doctor {
     position: relative;
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: auto;
     border-radius: 20px;
     overflow: hidden;
-    background: linear-gradient(-270deg, rgba(255, 255, 255, 0) 28.62%, rgba(255, 255, 255, 0.5) 78.07%);
-
-    @include r($mobile) {
-      min-height: 350px;
-    }
+    background: $white;
   }
 
   &__picture {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
+    max-height: 563px;
+    border-radius: 20px;
+    overflow: hidden;
 
     @include r($mobile) {
-      height: auto;
+      max-height: 221px;
     }
 
     img {
@@ -61,6 +55,11 @@
   }
 
   &__title {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 51px;
+    color: $gray-black;
+
     @include r($mobile) {
       font-size: 22px;
       font-weight: 500;
@@ -100,14 +99,14 @@
   }
 
   &__text {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 500;
-    line-height: 38px;
-    color: $black;
+    line-height: 33px;
+    color: $primary;
 
     @include r($mobile) {
-      font-size: 18px;
-      line-height: 22px;
+      font-size: 16px;
+      line-height: 20px;
     }
 
     &--small {
