--- a/src/main/shared/modules/main/main.scss
+++ b/src/main/shared/modules/main/main.scss
@@ -1,4 +1,16 @@
 .main {
   flex-grow: 1;
   overflow-y: hidden;
+
+  &__section {
+    padding-top: 110px;
+    padding-bottom: 20px;
+    background-color: #F7F9FC;
+    border-radius: 60px 60px 0 0;
+
+    @include r($mobile) {
+      padding-top: 50px;
+      border-radius: 30px 30px 0 0;
+    }
+  }
 }
