--- a/src/main/shared/modules/mobile-menu/mobile-menu.scss
+++ b/src/main/shared/modules/mobile-menu/mobile-menu.scss
@@ -1,175 +1,251 @@
 .mobile-menu {
-  position: absolute;
-  top: calc(100% + 14px);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 20px 18px 27px 20px;
-  width: 100%;
-  height: calc(100dvh - 157px);
-  background-color: $white;
-  box-shadow: 0 10px 30px 0 #B9B9B926;
-  border-radius: 15px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba($gray-black, .9);
+  z-index: 5;
   opacity: 0;
   visibility: hidden;
-  overflow: hidden;
-
-  transition: opacity .2s linear, visibility .2s linear;
-
-  @include rmin($mobile + 1) {
-    display: none;
-  }
+  pointer-events: none;
+  transition: .2s linear;
 
   &.active {
     opacity: 1;
     visibility: visible;
+    pointer-events: auto;
   }
 
-  &__icon {
+  &__wrapper {
+    position: relative;
+    top: 99px;
     display: flex;
-    flex-shrink: 0;
-    width: 12px;
-    height: 12px;
-    transform: rotate(90deg);
-    transition: .2s linear;
-  }
-
-  &__item {
-    padding: 16px 0;
-    border-bottom: 1px solid #ECECEC;
-
-    &:first-child {
-      padding-top: 0;
-    }
-
-    &:last-child {
-      padding-bottom: 0;
-      border-bottom: none;
-    }
-  }
-
-  &__link {
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 25px;
+    margin-left: auto;
+    width: 100%;
+    max-width: 1405px;
+    background-color: $white;
+    height: 670px;
+    border-radius: 20px;
+    overflow: hidden;
   }
 
   &__info {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 20px;
     justify-content: space-between;
-    gap: 10px;
+    padding: 40px 40px 50px;
+    background: linear-gradient(246.46deg, #F0F1FE 0%, #FDFEFF 47%, #EEEFFE 100%),
+    linear-gradient(246.46deg, #F1F2F6 0%, #FDFEFF 47%, #F1F2F6 100%),
+    linear-gradient(0deg, #F7F9FC, #F7F9FC);
+
+    @include r($mobile) {
+      padding: 40px 20px;
+      width: 100%;
+    }
   }
 
-  &__bottom {
+  &__address {
+    flex-grow: 0;
+
+    a, p {
+      text-align: left;
+      justify-content: flex-start;
+    }
+  }
+
+  &__content {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    width: 100%;
+    padding: 60px 20px;
+    background-color: $white;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: .2s linear;
 
-    .address {
-      align-items: flex-start;
-      gap: 12px;
+    @include r($mobile) {
+      position: absolute;
+      top: 0;
+      left: 20px;
+      right: 0;
+      height: 100%;
+      width: calc(100% - 20px);
+      padding: 40px 4px 40px 20px;
+      transform: translateX(100%);
+    }
+
+    &.active {
+      @include r($mobile) {
+        transform: translateX(0);
+      }
     }
   }
 
   &__inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    padding-right: 25px;
+    max-height: 670px;
+    overflow-y: auto;
+
+    @include r($mobile) {
+      padding-right: 11px;
+    }
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: #EFF4FF;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $primary;
+      border-radius: 10px;
+    }
+  }
+
+  &__item {
     display: flex;
     flex-direction: column;
-    padding: 30px 5px 20px 20px;
-    background-color: $white;
-    z-index: 1;
-    transform: translateX(100%);
-    transition: .2s linear;
+
+    &:nth-child(1) {
+      .mobile-menu__link {
+        padding-top: 0;
+      }
+    }
 
     &.active {
-      transform: translateX(0);
-    }
-
-    .mobile-menu__list {
-      height: 100%;
-      padding-right: 12px;
-      overflow-y: auto;
-
-      &::-webkit-scrollbar {
-        width: 3px; /* ширина scrollbar */
+      span {
+        color: $primary;
       }
 
-      &::-webkit-scrollbar-track {
-        background: #ECECEC;
-        border-radius: 10px;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        background-color: $primary; /* цвет плашки */
-        border-radius: 10px;
-      }
-    }
-
-    .mobile-menu__link {
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 20px;
-    }
-
-    .mobile-menu__item {
-      .mobile-menu__list {
-        height: 0;
-
-        .mobile-menu__link {
-          font-size: 14px;
-          font-weight: 500;
-          line-height: 16px;
-        }
-
-        .mobile-menu__item {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-        }
-      }
-
-      &.active {
-        & > .mobile-menu__info {
-          .mobile-menu__link {
-            color: $violet;
-          }
-
-          .mobile-menu__icon {
-            transform: rotate(-90deg);
-            fill: $violet;
-          }
-        }
-
-        .mobile-menu__list {
-          height: auto;
-          overflow: visible;
-          padding: 20px 0 24px;
-        }
+      svg {
+        transform: rotate(180deg);
+        fill: $primary;
       }
     }
   }
 
-  &__back {
+  &__link {
     display: flex;
     align-items: center;
-    gap: 14px;
-    margin-bottom: 30px;
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 30px;
-    color: $violet;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-bottom: 1px solid #ECECEC;
+
+    &:hover {
+      opacity: 1;
+
+      span {
+        color: $primary;
+      }
+
+      svg {
+        transform: rotate(180deg);
+        fill: $primary;
+      }
+    }
+
+    span {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+      color: $gray-black;
+      transition: .2s linear;
+
+      @include r($mobile) {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 17px;
+      }
+    }
 
     svg {
       display: flex;
       width: 12px;
       height: 12px;
-      transform: rotate(180deg);
-      fill: $violet;
+      fill: $gray-black;
+      transition: .2s linear;
+    }
+  }
+
+  &__element {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+
+    @include r($mobile) {
+      gap: 10px;
+    }
+
+    &.active {
+      display: flex;
+    }
+  }
+
+  &__list {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 446px;
+
+    @include r($mobile) {
+      overflow: hidden;
+    }
+
+    &--inner {
+      position: absolute;
+      top: 0;
+      left: calc(100% + 50px);
+      display: none;
+      height: 100%;
+      gap: 18px;
+      max-width: 370px;
+      background-color: $white;
+
+      @include r($mobile) {
+        display: flex;
+        left: 0;
+        width: 100%;
+        max-width: 100%;
+        transform: translateX(150%);
+        transition: .2s linear;
+      }
+
+      &.active {
+        display: flex;
+
+        @include r($mobile) {
+          transform: translateX(0);
+        }
+      }
+
+      .mobile-menu__link {
+        padding: 0;
+        border-bottom: none;
+        transition: .2s linear;
+
+        span {
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 16px;
+          color: $gray;
+          transition: .2s linear;
+
+          &:hover {
+            color: $gray-black;
+          }
+        }
+
+        &:hover {
+          text-decoration: underline;
+          opacity: 1;
+        }
+      }
     }
   }
 }
