--- a/src/main/shared/modules/payment-info/payment-info.scss
+++ b/src/main/shared/modules/payment-info/payment-info.scss
@@ -11,6 +11,7 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
+    text-align: right;
     color: $white;
 
     @include r($mobile) {
