--- a/src/main/shared/ui/burger/burger.scss
+++ b/src/main/shared/ui/burger/burger.scss
@@ -1,9 +1,14 @@
 .burger {
   position: relative;
   display: block;
-  width: 18px;
-  height: 14px;
+  width: 29px;
+  height: 25px;
   overflow: hidden;
+
+  @include r($mobile) {
+    width: 22px;
+    height: 20px;
+  }
 
   &::before,
   &::after,
@@ -12,18 +17,36 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 18px;
-    height: 2px;
-    border-radius: 2px;
-    background-color: $violet;
+    width: 29px;
+    height: 4px;
+    border-radius: 20px;
+    background-color: $primary;
     transition: .2s linear;
+
+    @include r($mobile) {
+      width: 22px;
+      height: 3px;
+    }
   }
 
   &__item {
-    top: 6px;
+    top: 10px;
+    left: 13px;
+    width: 16px;
+    transition: 0s;
+
+    @include r($mobile) {
+      top: 9px;
+      width: 12px;
+      left: 10px;
+    }
   }
 
   &::after {
-    top: 12px;
+    top: 21px;
+
+    @include r($mobile) {
+      top: 17px;
+    }
   }
 }
