--- a/src/main/shared/ui/show-more/show-more.scss
+++ b/src/main/shared/ui/show-more/show-more.scss
@@ -18,7 +18,7 @@
     font-size: 20px;
     font-weight: 600;
     line-height: 25px;
-    color: $violet;
+    color: $primary;
     text-decoration: underline;
 
     @include r($mobile) {
@@ -31,7 +31,7 @@
     display: flex;
     width: 10px;
     height: 10px;
-    fill: $violet;
+    fill: $primary;
     transition: .2s linear;
   }
 
