--- a/src/main/shared/ui/social-link/social-link.scss
+++ b/src/main/shared/ui/social-link/social-link.scss
@@ -6,9 +6,13 @@
   width: 60px;
   height: 60px;
   cursor: pointer;
-
-  border: 2px solid $violet;
   border-radius: 50%;
+  background-color: $primary;
+
+  &:hover {
+    opacity: 1;
+    background-color: #4DBED0;
+  }
 
   @include r($mobile) {
     width: 50px;
@@ -18,21 +22,13 @@
   &__icon {
     display: flex;
     flex-shrink: 0;
-    width: 32px;
-    height: 32px;
-    fill: $violet;
+    width: 25px;
+    height: 25px;
+    fill: $white;
 
     @include r($mobile) {
       width: 26px;
       height: 26px;
-    }
-  }
-
-  &--light {
-    border-color: $white;
-
-    .social-link__icon {
-      fill: $white;
     }
   }
 }
