--- a/src/main/shared/ui/text/text.scss
+++ b/src/main/shared/ui/text/text.scss
@@ -2,7 +2,7 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 31px;
-  color: $gray;
+  color: $gray-black;
 
   @include r($mobile) {
     font-size: 16px;
@@ -14,10 +14,17 @@
     color: $black;
   }
 
+  &--bold {
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 33px;
+  }
+
   &--big {
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 40px;
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 33px;
+    color: $gray-black;
 
     @include r($mobile) {
       font-size: 20px;
