--- a/src/main/shared/ui/title/title.scss
+++ b/src/main/shared/ui/title/title.scss
@@ -2,6 +2,7 @@
   font-size: 40px;
   font-weight: 600;
   line-height: 51px;
+  color: $gray-black;
 
   @include r($mobile) {
     font-size: 26px;
@@ -12,6 +13,7 @@
     font-size: 50px;
     font-weight: 500;
     line-height: 63px;
+    color: $gray-black;
 
     @include r($mobile) {
       font-size: 26px;
