--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,7 @@ body {
   line-height: 1.2;
   color: $black;
 
-  background-color: $bg;
+  background-color: #FFFFFF;
 
   overflow-x: hidden;
 
@@ -42,7 +42,12 @@ body {
 }
 
 .fixed {
+  padding-right: 17px;
   overflow: hidden;
+
+  @include r($mobile) {
+    padding-right: 0;
+  }
 }
 
 .hidden {
