--- a/src/main/shared/modules/index.scss
+++ b/src/main/shared/modules/index.scss
@@ -27,6 +27,8 @@
 @import './requisites/requisites';
 @import './gallery/gallery';
 @import './main-block/main-block';
+@import './steps/steps';
+@import './info-block/info-block';
 
 @import './articles/article-feature';
 @import './articles/article-category';
