--- a/src/main/shared/modules/articles/article-timeline.scss
+++ b/src/main/shared/modules/articles/article-timeline.scss
@@ -2,11 +2,22 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  grid-column: span 1;
   padding: 30px 30px 40px;
   min-height: 364px;
   border-radius: 20px;
   overflow: hidden;
   background-color: $bg;
+
+  @include r($mobile) {
+    padding: 20px 20px 30px;
+    max-width: 257px;
+    min-height: 249px;
+  }
+
+  &--big {
+    grid-column: span 2;
+  }
 
   &::after {
     content: "";
@@ -16,41 +27,74 @@
     bottom: 0;
     display: flex;
     width: 100%;
-    height: 10px;
-    background: linear-gradient(225.94deg, #884190 0%, #623068 100%);
+    height: 20px;
+    background: $primary;
     transition: .2s linear;
     z-index: 0;
+  }
+
+  &--picture {
+    padding: 0;
+
+    &::after {
+      display: none;
+    }
+  }
+
+  &__picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    img {
+      @include coverFull();
+    }
   }
 
   &:hover {
     &::after {
       height: 100%;
     }
+
     .article-timeline__number {
       color: $white;
       background-color: rgba($white, 0.1);
     }
+
     .article-timeline__title,
     .article-timeline__text {
       color: $white;
     }
+
     .article-timeline__text {
       margin-top: 20px;
       height: auto;
+
+      @include r($mobile) {
+        margin-top: 10px;
+      }
     }
   }
 
   &__title {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 28px;
-    color: $black;
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 33.15px;
+    color: $gray-black;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     line-clamp: 3;
     -webkit-box-orient: vertical;
     transition: .2s linear;
+
+    @include r($mobile) {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+    }
   }
 
   &__number {
@@ -65,11 +109,21 @@
     font-size: 30px;
     font-weight: 500;
     line-height: 36px;
-    color: $violet;
+    color: $primary;
     border-radius: 5px;
-    background-color: rgba($violet, 0.05);
+    background-color: rgba($primary, 0.05);
     transition: .2s linear;
     z-index: 1;
+
+    @include r($mobile) {
+      top: 20px;
+      left: 20px;
+      width: 40px;
+      height: 40px;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 24px;
+    }
   }
 
   &__info {
@@ -83,9 +137,9 @@
     margin-top: 0;
     height: 0;
 
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 25px;
     color: $black;
 
     overflow: hidden;
@@ -98,6 +152,11 @@
 
     span {
       font-weight: 700;
+    }
+
+    @include r($mobile) {
+      font-size: 14px;
+      line-height: 18px;
     }
   }
 }
