--- a/src/main/shared/modules/head-block/head-block.scss
+++ b/src/main/shared/modules/head-block/head-block.scss
@@ -4,6 +4,11 @@
   align-items: flex-start;
   gap: 20px;
 
+  &--sticky {
+    position: sticky;
+    top: 50px;
+  }
+
   &--row {
     flex-direction: row;
     align-items: center;
