--- a/src/main/shared/modules/main-block/main-block.scss
+++ b/src/main/shared/modules/main-block/main-block.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-end;
     gap: 20px;
     width: 100%;
     min-height: 475px;
@@ -32,8 +33,34 @@
     }
   }
 
-  &__title {
-    margin-top: auto;
+  &__link {
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 40px;
+    color: $gray-black;
+
+    @include r($mobile) {
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 25px;
+    }
+  }
+
+  &__price {
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 33px;
+    color: $gray-black;
+
+    @include r($mobile) {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 22px;
+    }
+
+    span {
+      font-weight: 700;
+    }
   }
 
   &__slider {
@@ -56,6 +83,12 @@
 
     img {
       @include coverFull();
+    }
+  }
+
+  &__tag {
+    @include r($mobile) {
+      margin-bottom: -10px
     }
   }
 }
