--- a/src/main/shared/modules/steps-info/steps-info.scss
+++ b/src/main/shared/modules/steps-info/steps-info.scss
@@ -1,11 +1,8 @@
 .steps-info {
-  &__list {
+  &__content {
     display: flex;
     flex-direction: column;
-  }
-
-  &__content {
-
+    gap: 30px;
   }
 
   &__item {
@@ -37,16 +34,46 @@
   }
 
   &__element {
-    display: none;
+    display: flex;
     flex-direction: column;
-    gap: 20px;
+    background-color: #F7F9FC;
+    border-radius: 20px;
+    overflow: hidden;
+  }
+
+  &__header {
+    position: relative;
+    width: 100%;
+    height: 380px;
+    border-radius: 20px;
+    overflow: hidden;
 
     @include r($mobile) {
-      gap: 10px;
+      height: 200px;
+    }
+  }
+
+  &__tag {
+    left: initial;
+    top: 20px;
+    right: 28px;
+    padding: 5px 20px;
+
+    @include r($mobile) {
+      top: 10px;
+      right: 10px;
     }
 
-    &.active {
-      display: flex;
+    .tag__text {
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 31px;
+
+      @include r($mobile) {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+      }
     }
   }
 
@@ -65,28 +92,20 @@
 
   &__picture {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 323px;
-    border-radius: 20px;
-    overflow: hidden;
-
-    @include r($mobile) {
-      max-height: 137px;
-    }
+    height: 100%;
 
     img {
       @include coverFull();
-      object-position: top;
     }
   }
 
   &__info {
     display: flex;
     flex-direction: column;
-    padding: 40px 30px;
-    border: 1px solid #E9E9E9;
-    border-radius: 20px;
-    background-color: $white;
+    padding: 30px;
 
     @include r($mobile) {
       padding: 20px;
@@ -96,8 +115,8 @@
   &__text {
     font-size: 18px;
     font-weight: 400;
-    line-height: 30px;
-    color: $gray;
+    line-height: 25px;
+    color: #555555;
 
     @include r($mobile) {
       font-size: 16px;
