--- a/src/main/shared/modules/video-block/video-block.scss
+++ b/src/main/shared/modules/video-block/video-block.scss
@@ -1,24 +1,40 @@
 .video-block {
   position: relative;
   display: flex;
+  gap: 20px;
   width: 100%;
-  height: 800px;
-  border-radius: 20px;
-  overflow: hidden;
 
   @include r($mobile) {
-    height: auto;
-    aspect-ratio: 16/9;
+    flex-direction: column;
+
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    max-width: 500px;
   }
 
   &__preview {
+    position: relative;
     display: flex;
     width: 100%;
+    border-radius: 20px;
+    overflow: hidden;
   }
 
   &__content {
     display: flex;
     width: 100%;
+    max-height: 700px;
+    overflow: hidden;
+
+    @include r($mobile) {
+      height: 100vh;
+      max-height: 400px;
+    }
   }
 
   &__picture {
@@ -69,41 +85,12 @@
     }
   }
 
-  &__info {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 30px;
-    width: 400px;
-    height: 400px;
-    padding: 0 0 40px 40px;
-    background-color: $primary;
-    border-radius: 0 1000px 0 0;
-    outline: 30px solid rgba($white, 0.4);
-
-    @include r($mobile) {
-      gap: 10px;
-      width: 161px;
-      height: 138px;
-      padding: 0 0 20px 20px;
-      outline-width: 10px;
-    }
-  }
 
   &__text {
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 30px;
-    color: $white;
-
-    @include r($mobile) {
-      font-size: 12px;
-      line-height: 15px;
-    }
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #555555;
   }
 
   &__video {
@@ -119,6 +106,102 @@
       display: flex;
       width: 100%;
       height: 100%;
+    }
+  }
+
+  &__title {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 51px;
+    color: $gray-black;
+
+    @include r($mobile) {
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 30px;
+    }
+
+    span {
+      font-size: 60px;
+      font-weight: 600;
+      line-height: 76px;
+      color: $primary;
+
+      @include r($mobile) {
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 30px;
+      }
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 30px 30px 40px;
+    min-height: 340px;
+    background: linear-gradient(246.46deg, #F1F2F6 0%, #FDFEFF 47%, #F1F2F6 100%);
+    border-radius: 20px;
+    overflow: hidden;
+
+    @include r($mobile) {
+      justify-content: flex-start;
+      padding: 30px 20px;
+      min-height: auto;
+    }
+
+    &--green {
+      background: linear-gradient(246.46deg, rgba(241, 242, 246, 0.05) 0%, rgba(253, 254, 255, 0.05) 47%, rgba(241, 242, 246, 0.05) 100%),
+      linear-gradient(246.46deg, rgba(66, 165, 181, 0.1) 0%, rgba(66, 165, 181, 0.06) 47%, rgba(66, 165, 181, 0.1) 100%);
+    }
+  }
+
+  &__play {
+    position: absolute;
+    left: 40px;
+    bottom: 40px;
+    display: flex;
+    align-items: center;
+    gap: 23px;
+
+    @include r($mobile) {
+      gap: 16px;
+      left: 20px;
+      bottom: 30px;
+    }
+
+    .video-block__text {
+      font-size: 26px;
+      font-weight: 500;
+      line-height: 33px;
+      color: $white;
+
+      @include r($mobile) {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 23px;
+      }
+    }
+  }
+
+  &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 60px;
+    height: 60px;
+    background-color: $primary;
+    cursor: pointer;
+    border-radius: 100%;
+
+    svg {
+      display: flex;
+      width: 24px;
+      height: 24px;
+      fill: $white;
     }
   }
 }
