--- a/src/main/shared/ui/text/text.scss
+++ b/src/main/shared/ui/text/text.scss
@@ -18,6 +18,12 @@
     font-size: 26px;
     font-weight: 500;
     line-height: 33px;
+
+    @include r($mobile) {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+    }
   }
 
   &--big {
