--- a/src/main/shared/modules/success-modal/success-modal.scss
+++ b/src/main/shared/modules/success-modal/success-modal.scss
@@ -2,23 +2,45 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
-    padding: 60px 50px;
+    align-items: flex-start;
+    padding: 50px;
+    width: 668px;
     background-color: $white;
-    background-image: $gradient-primary-light;
     border-radius: 20px;
     overflow: hidden;
+
+    @include r($mobile) {
+      padding: 50px 20px;
+      width: 100%;
+      max-width: 668px;
+    }
   }
 
   &__title {
     margin-bottom: 20px;
-    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 51px;
+    color: $gray-black;
+
+    @include r($mobile) {
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 33px;
+    }
   }
 
   &__text {
     margin-bottom: 40px;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 400;
-    line-height: 33px;
-    text-align: center;
+    line-height: 31px;
+    color: $gray;
+
+    @include r($mobile) {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+    }
   }
 }
