--- a/src/main/shared/modules/articles/article-category.scss
+++ b/src/main/shared/modules/articles/article-category.scss
@@ -20,6 +20,7 @@
     @include hov() {
       &:hover {
         .article-category__button {
+          gap: 10px;
           width: 223px;
 
           .button__icon {
@@ -28,6 +29,10 @@
 
           span {
             width: auto;
+          }
+
+          .article-category__icon {
+            width: 30px;
           }
         }
       }
@@ -56,8 +61,11 @@
     gap: 0;
 
     @include r($mobile) {
-      width: 255px;
-      height: 60px;
+      gap: 10px;
+      max-width: 255px;
+      width: calc(100% - 40px);
+      min-height: 60px;
+      height: auto;
     }
 
     span {
@@ -74,6 +82,25 @@
     .button__icon {
       @include r($mobile) {
         display: none;
+      }
+    }
+
+    @include hov() {
+      &:hover {
+        gap: 10px;
+        width: 223px;
+
+        .button__icon {
+          display: none;
+        }
+
+        span {
+          width: auto;
+        }
+
+        .article-category__icon {
+          width: 30px;
+        }
       }
     }
   }
@@ -113,6 +140,21 @@
       font-size: 18px;
       font-weight: 400;
       line-height: 25px;
+    }
+  }
+
+  &__icon {
+    display: flex;
+    flex-shrink: 0;
+    width: 0;
+    height: 30px;
+    fill: $white;
+    overflow: hidden;
+    transition: .2s linear;
+
+    @include r($mobile) {
+      width: 23px;
+      height: 23px;
     }
   }
 }
