--- a/src/main/shared/modules/articles/article-person.scss
+++ b/src/main/shared/modules/articles/article-person.scss
@@ -1,12 +1,14 @@
 .article-person {
   display: flex;
   flex-direction: column;
+  height: 100%;
   background-color: #F7F9FC;
   border-radius: 20px;
 
   &__header {
     position: relative;
     display: flex;
+    flex-shrink: 0;
     width: 100%;
     height: 390px;
     border-radius: 20px;
@@ -21,7 +23,7 @@
         .article-person__button {
           padding: 23px 40px;
           height: 70px;
-          width: auto;
+          width: calc(100% - 40px);
 
           .button__content {
             width: auto;
@@ -56,13 +58,15 @@
     padding: 0;
     width: 60px;
     height: 60px;
-    transition: .2s linear;
+    transition: width .2s linear;
 
     @include r($mobile) {
       bottom: 20px;
       padding: 23px 40px;
-      width: 100%;
-      height: 70px;
+      width: calc(100% - 40px);
+      max-width: 100%;
+      height: auto;
+      min-height: 70px;
     }
 
     .button__content {
@@ -89,6 +93,7 @@
   &__info {
     display: flex;
     flex-direction: column;
+    height: 100%;
     gap: 12px;
     padding: 20px 20px 30px;
 
@@ -121,6 +126,7 @@
   &__link {
     display: flex;
     align-items: center;
+    margin-top: auto;
     gap: 12px;
     font-size: 18px;
     font-weight: 600;
