--- a/src/main/shared/modules/main-block/main-block.scss
+++ b/src/main/shared/modules/main-block/main-block.scss
@@ -67,6 +67,7 @@
     display: flex;
     width: 100%;
     border-radius: 20px;
+    max-height: 700px;
     overflow: hidden;
 
     @include r($mobile) {
